# physical_app

./: .env.ci  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
blog/: admin.py  models.py  serializers.py  urls.py  views.py  yasg.py
blog/migrations/: 0001_initial.py  0002_alter_comment_text_alter_post_text.py
pht/: asgi.py  settings.py  urls.py  wsgi.py
tests/: factories.py  list_posts_comments_ordering_test.py  post_create_test.py  post_detail_test.py  post_list_test.py  view_count_test.py
